# BongoCat

./: .gitignore  Cargo.toml
relay/: Cargo.toml
relay/src/: lib.rs  main.rs
src/: App.vue
src-tauri/: tauri.conf.json
src/composables/: useBongoConnection.ts  useDevice.ts  useGamepad.ts  useModel.ts
src/constants/: index.ts
src/pages/preference/: index.vue
src/pages/preference/components/connect/: index.vue
src/pages/remote/: index.vue
src/router/: index.ts
src/stores/: connection.ts
src/types/: connection.ts
src/utils/: live2d.ts
