[package]
name = "bongo-cat-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
